# shader-playground

./: Cargo.toml  README.md  index.html  run.sh
pkg/: package.json  shader_playground.d.ts  shader_playground.js  shader_playground_bg.wasm  shader_playground_bg.wasm.d.ts
src/: app.rs  lib.rs  opengl_renderer.rs  program.rs  shader.fs  shader.vs
