[package]
name = "shader-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.21.0"
eframe = { version = "0.31.0", default-features = false, features = ["glow", "accesskit", "default_fonts", "web_screen_reader"] }
glam = "0.29.2"
log = "0.4.25"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" 

[lib]
crate-type = ["cdylib"]
